# py-combinator

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
.github/workflows/: distribution.yml  format.yml  lint.yml  test.yml
macros/: Cargo.toml
macros/src/: lib.rs
py-combinator/: Cargo.toml  build.rs
py-combinator/python/py_combinator/: __init__.py  __init__.pyi  py_combinator.pyi
py-combinator/python/tests/: test_base_iterator.py  test_iterator_type_deduction.py  test_list_iterator.py  test_sized_double_ended_iterator.py
py-combinator/src/: base_iterator.rs  double_ended_iterator.rs  exact_size_iterator.rs  iter_iterator.rs  lib.rs  list_iterator.rs  sized_double_ended_iterator.rs
python/my_project/: __init__.py
python/py_combinator/: __init__.py  wrappers.py
python/tests/: suite_generator.py  test_all.py  test_list_iterator.py  test_list_wrapper.py
serialization/: Cargo.toml
serialization/src/: attr_list.rs  impl_block.rs  lib.rs  method.rs  self_function.rs  self_generic.rs
serialization/src/method/: deserialize.rs  serialize.rs
src/: base_iterator.rs  double_ended_iterator.rs  exact_size_iterator.rs  lib.rs  list_iterator.rs  pyiter_wrapper.rs  pylist_wrapper.rs  sized_double_ended_iterator.rs
