[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "py_combinator"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"
module-name = "py_combinator._py_combinator"
features = ["pyo3/extension-module"]
